plugins/kotlin/idea/tests/testData/multiModuleLineMarker/expectEnumEntries/common/common.kt
package test

expect enum class <!LINE_MARKER("descr='Has actuals in jvm module'")!>Enum<!> {
    <!LINE_MARKER("descr='Has actuals in jvm module'")!>A<!>,
    <!LINE_MARKER("descr='Has actuals in jvm module'")!>B<!>,
    <!LINE_MARKER("descr='Has actuals in jvm module'")!>C<!>
}
